Додав зміни до файлу index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <a-scene>
-        <a-text value="текст на українській мові" font="https://drive.google.com/file/d/1TvRgRUaJbh7GtkX7mw_pUMlAjlA_bqFR/view?usp=sharing/arial-msdf.json" color="#33C3F0" negate="false" lang="uk"></a-text>
+        <a-text value="текс на українській мові" font="https://drive.google.com/file/d/1TvRgRUaJbh7GtkX7mw_pUMlAjlA_bqFR/view?usp=sharing/arial-msdf.json" color="#33C3F0" negate="false" lang="uk"></a-text>
         <a-torus position="-2 1 -5" color="green" radius="1.2"></a-torus> 
         <a-cylinder color="yellow" height="2" radius="0.05" position="-2 -1 -5"></a-cylinder>
         <a-cylinder color="blue" height="2" radius="0.05"position="-3 -1 -5"></a-cylinder>
