--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <a-scene>
-        <a-text value="текс на українській мові" font="https://drive.google.com/file/d/1TvRgRUaJbh7GtkX7mw_pUMlAjlA_bqFR/view?usp=sharing/arial-msdf.json" color="#33C3F0" negate="false" lang="uk"></a-text>
+        <a-text value="текст на українській мові" font="https://drive.google.com/file/d/1TvRgRUaJbh7GtkX7mw_pUMlAjlA_bqFR/view?usp=sharing/arial-msdf.json" color="#33C3F0" negate="false" lang="uk"></a-text>
         <a-torus position="-2 1 -5" color="green" radius="1.2"></a-torus> 
         <a-cylinder color="yellow" height="2" radius="0.05" position="-2 -1 -5"></a-cylinder>
         <a-cylinder color="blue" height="2" radius="0.05"position="-3 -1 -5"></a-cylinder>
@@ -12,7 +12,7 @@
         <a-plane width="9" height="2" position="3 1 -9"></a-plane>
         <a-plane width="10" height="10" rotation="-58 -1 0" position="-2.5 -2.7 -7" color="purple"></a-plane>
         <a-plane
-        src="https://raw.githubusercontent.com/aframevr/sampleassets/master/assets/images/illustration/758pxCanestra_di_frutta_(Caravaggio).jpg" width="7" height="7"rotation="-55 0 0" position="-2 -2 -5" color="purple"></a-plane>
+        src="https://github.com/aframevr/sample-assets/blob/master/assets/images/bricks/brick_bump.jpg" width="7" height="7"rotation="-55 0 0" position="-2 -2 -5" color="purple"></a-plane>
     </a-scene>
   </body>
 </html>
