Додав зміни до файлу index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a-plane width="9" height="2" position="3 1 -9"></a-plane>
         <a-plane width="10" height="10" rotation="-58 -1 0" position="-2.5 -2.7 -7" color="purple"></a-plane>
         <a-plane
-           src="https://raw.githubusercontent.com/aframevr/sampleassets/master/assets/images/illustration/758pxCanestra_di_frutta_(Caravaggio).jpg"
+           src="https://raw.githubusercontent.com/OlgaKalsam/A-Frame/main/disturb.jpg"
            width="7"
            height="7"
            rotation="-55 0 0"
