--- a/index.html
+++ b/index.html
@@ -4,22 +4,25 @@
   </head>
   <body>
     <a-scene>
-        <a-text value="текст на українській мові" font="https://drive.google.com/file/d/1TvRgRUaJbh7GtkX7mw_pUMlAjlA_bqFR/view?usp=sharing/arial-msdf.json" color="#33C3F0" negate="false" lang="uk"></a-text>
-        <a-torus position="-2 1 -5" color="green" radius="1.2"></a-torus> 
-        <a-cylinder color="yellow" height="2" radius="0.05" position="-2 -1 -5"></a-cylinder>
-        <a-cylinder color="blue" height="2" radius="0.05"position="-3 -1 -5"></a-cylinder>
-        <a-torus-knot color="orange" radius="1.2"position="-3 1 -5"></a-torus-knot>
-        <a-plane width="9" height="2" position="3 1 -9"></a-plane>
-        <a-plane width="10" height="10" rotation="-58 -1 0" position="-2.5 -2.7 -7" color="purple"></a-plane>
-        <a-plane
-           src="https://raw.githubusercontent.com/OlgaKalsam/A-Frame/main/disturb.jpg"
-           width="7"
-           height="7"
-           rotation="-55 0 0"
-           position="-2 -2 -5"
-           color="purple">
-         </a-plane>
-
-    </a-scene>
+        <a-assets>
+          <!-- Оновлений URL до JSON файлу шрифту -->
+          <a-asset-item id="customFont" src="https://raw.githubusercontent.com/OlgaKalsam/A-Frame/main/arial-msdf.json"></a-asset-item>
+        </a-assets>
+          <a-text value="Маслак" font="#customFont"></a-text>
+          <a-torus position="-2 1 -5" color="green" radius="1.2"></a-torus> 
+          <a-cylinder color="yellow" height="2" radius="0.05" position="-2 -1 -5"></a-cylinder>
+          <a-cylinder color="blue" height="2" radius="0.05" position="-3 -1 -5"></a-cylinder>
+          <a-torus-knot color="orange" radius="1.2" position="-3 1 -5"></a-torus-knot>
+          <a-plane width="9" height="2" position="3 1 -9"></a-plane>
+          <a-plane width="10" height="10" rotation="-58 -1 0" position="-2.5 -2.7 -7" color="purple"></a-plane>
+          <a-plane
+             src="https://raw.githubusercontent.com/OlgaKalsam/A-Frame/main/disturb.jpg"
+             width="7"
+             height="7"
+             rotation="-55 0 0"
+             position="-2 -2 -5"
+             color="purple">
+           </a-plane>
+     </a-scene>
   </body>
 </html>
