Додав зміни до файлу index.html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   </head>
   <body>
     <a-scene>
-          <a-assets>
-            <a-asset-item id="customFont" src="https://raw.githubusercontent.com/OlgaKalsam/A-Frame/main/OpenSans-Italic.json"></a-asset-item>
+          <a-assets timeout="10000">
+            <a-asset-item id="customFont" src="https://raw.githubusercontent.com/OlgaKalsam/A-Frame/main/OpenSans-Italic-VariableFont_wdth,wght-msdf.json"></a-asset-item>
           </a-assets>
           <a-text value="Маслак" font="#customFont"></a-text>
           <a-torus position="-2 1 -5" color="green" radius="1.2"></a-torus> 
