--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <body>
     <a-scene>
           <a-assets timeout="10000">
-            <a-asset-item id="customFont" src="https://raw.githubusercontent.com/OlgaKalsam/A-Frame/main/OpenSans-Italic-VariableFont_wdth,wght-msdf.json"></a-asset-item>
+            <a-asset-item id="font" src="https://raw.githubusercontent.com/OlgaKalsam/A-Frame/main/OpenSans-Italic-VariableFont_wdth,wght-msdf.json"></a-asset-item>
           </a-assets>
-          <a-text value="Маслак" font="#customFont"></a-text>
+          <a-text value="Ольга Маслак" font="https://raw.githubusercontent.com/OlgaKalsam/A-Frame/main/OpenSans-Italic-VariableFont_wdth,wght-msdf.json"></a-text>
           <a-torus position="-2 1 -5" color="green" radius="1.2"></a-torus> 
           <a-cylinder color="yellow" height="2" radius="0.05" position="-2 -1 -5"></a-cylinder>
           <a-cylinder color="blue" height="2" radius="0.05" position="-3 -1 -5"></a-cylinder>
