--- a/index.html
+++ b/index.html
@@ -4,24 +4,21 @@
   </head>
   <body>
     <a-scene>
-          <a-assets timeout="10000">
-            <a-asset-item id="font" src="https://raw.githubusercontent.com/OlgaKalsam/A-Frame/main/OpenSans-Italic-VariableFont_wdth,wght-msdf.json"></a-asset-item>
-          </a-assets>
-          <a-text value="Ольга Маслак" font="https://raw.githubusercontent.com/OlgaKalsam/A-Frame/main/OpenSans-Italic-VariableFont_wdth,wght-msdf.json"></a-text>
-          <a-torus position="-2 1 -5" color="green" radius="1.2"></a-torus> 
-          <a-cylinder color="yellow" height="2" radius="0.05" position="-2 -1 -5"></a-cylinder>
-          <a-cylinder color="blue" height="2" radius="0.05" position="-3 -1 -5"></a-cylinder>
-          <a-torus-knot color="orange" radius="1.2" position="-3 1 -5"></a-torus-knot>
-          <a-plane width="9" height="2" position="3 1 -9"></a-plane>
-          <a-plane width="10" height="10" rotation="-58 -1 0" position="-2.5 -2.7 -7" color="purple"></a-plane>
-          <a-plane
-             src="https://raw.githubusercontent.com/OlgaKalsam/A-Frame/main/disturb.jpg"
-             width="7"
-             height="7"
-             rotation="-55 0 0"
-             position="-2 -2 -5"
-             color="purple">
-           </a-plane>
-     </a-scene>
+      <a-text value="Вітаємо у браузерній VR!" color="black" width="10" position="-0.5 1 -6"font="arial-msdf.json" negate="false"></a-text>
+      <a-torus position="-2 1 -5" color="green" radius="1.2"></a-torus> 
+      <a-cylinder color="yellow" height="2" radius="0.05" position="-2 -1 -5"></a-cylinder>
+      <a-cylinder color="blue" height="2" radius="0.05" position="-3 -1 -5"></a-cylinder>
+      <a-torus-knot color="orange" radius="1.2" position="-3 1 -5"></a-torus-knot>
+      <a-plane width="9" height="2" position="3 1 -9"></a-plane>
+      <a-plane width="10" height="10" rotation="-58 -1 0" position="-2.5 -2.7 -7" color="purple"></a-plane>
+      <a-plane
+        src="https://raw.githubusercontent.com/OlgaKalsam/A-Frame/main/disturb.jpg"
+        width="7"
+        height="7"
+        rotation="-55 0 0"
+        position="-2 -2 -5"
+        color="purple">
+      </a-plane>
+    </a-scene>
   </body>
 </html>
