--- a/index.html
+++ b/index.html
@@ -4,13 +4,7 @@
   </head>
   <body>
     <a-scene>
-      <a-assets>
-        <!-- Поміняйте URL на правильний для вашого файлу шрифту -->
-        <a-asset-item id="font" src="https://raw.githubusercontent.com/OlgaKalsam/A-Frame/main/ArialMT-msdf.json"></a-asset-item>
-        <img id="fontImage" src="https://raw.githubusercontent.com/OlgaKalsam/A-Frame/main/ArialMT.0.png" crossorigin="anonymous">
-      </a-assets>
-      <a-text mixin="font" value="Вітаємо у браузерній VR!" color="black" width="10" position="-0.5 1 -6"></a-text>
-      <a-mixin id="font" text="font: #font; negate: false"></a-mixin>
+      <a-text value="Вітаю Ольга Маслак!" color="red" width="10" position="-0.5 1 -6" font="Arial-msdf.json" ></a-text>
       <a-torus position="-2 1 -5" color="green" radius="1.2"></a-torus> 
       <a-cylinder color="yellow" height="2" radius="0.05" position="-2 -1 -5"></a-cylinder>
       <a-cylinder color="blue" height="2" radius="0.05" position="-3 -1 -5"></a-cylinder>
