--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   </head>
   <body>
     <a-scene>
-      <a-text value="Вітаю Ольга Маслак!" color="red" width="10" position="-0.5 1 -6" font="Arial-msdf.json" ></a-text>
+      <a-text value="Вітаю Ольга Маслак!" width="10" position="-0.1 1.3 -5" font="Arial-msdf.json" ></a-text>
       <a-torus position="-2 1 -5" color="green" radius="1.2"></a-torus> 
       <a-cylinder color="yellow" height="2" radius="0.05" position="-2 -1 -5"></a-cylinder>
       <a-cylinder color="blue" height="2" radius="0.05" position="-3 -1 -5"></a-cylinder>
       <a-torus-knot color="orange" radius="1.2" position="-3 1 -5"></a-torus-knot>
-      <a-plane width="9" height="2" position="3 1 -9"></a-plane>
+      <a-plane color="red" width="9" height="2" position="3 1 -9"></a-plane>
       <a-plane width="10" height="10" rotation="-58 -1 0" position="-2.5 -2.7 -7" color="purple"></a-plane>
       <a-plane
         src="https://raw.githubusercontent.com/OlgaKalsam/A-Frame/main/disturb.jpg"
